fixed comment alignment

--- a/src/index.css
+++ b/src/index.css
@@ -189,6 +189,9 @@
   flex-direction: column;
   align-items: flex-start;
   font-size: 15px;
+  text-align: left;
+  word-break: break-word;
+  
 }
 
 /* signup modal */
